--- a/config/config.yaml
+++ b/config/config.yaml
@@ -80,7 +80,7 @@ report:
   reverse_content_order: false # 内容顺序：false=热点词汇统计在前，true=新增热点新闻在前
 
 notification:
-  enable_notification: true # 是否启用通知功能，如果 false，则不发送手机通知
+  enable_notification: false # 是否启用通知功能，如果 false，则不发送手机通知
   message_batch_size: 4000 # 消息分批大小（字节）(这个配置别动)
   dingtalk_batch_size: 20000 # 钉钉消息分批大小（字节）(这个配置也别动)
   feishu_batch_size: 30000 # 飞书消息分批大小（字节）
@@ -96,7 +96,7 @@ notification:
   #   - 只想在工作日白天接收推送（如 09:00-18:00）
   #   - 希望在晚上固定时间收到汇总（如 20:00-22:00）
   push_window:
-    enabled: true  # 是否启用推送时间窗口控制，默认关闭
+    enabled: false  # 是否启用推送时间窗口控制，默认关闭
     # 注意：GitHub Actions 执行时间不稳定，时间范围建议至少留足 2 小时
     # 如果想要精准的定时推送，建议使用 Docker 部署在个人服务器上
     time_range:
@@ -197,13 +197,13 @@ platforms:
   # === 其他/工具类 ===
   - id: "chongbuluo"
     name: "虫部落"
-    id: "tencent-hot"
+  - id: "tencent-hot"
     name: "腾讯新闻 综合早报"    
-    id: "cls-telegraph"
+  - id: "cls-telegraph"
     name: "财联社 电报"    
-    id: "cls-depth"
+  - id: "cls-depth"
     name: "财联社 深度"    
-    id: "fastbull-express"
+  - id: "fastbull-express"
     name: "法布财经 快讯"    
-    id: "fastbull-news"
+  - id: "fastbull-news"
     name: "法布财经 头条
